# marketplace-liquidity-monitor

./: .env.example  README.md  docker-compose.yml  pyproject.toml
configs/: project.json
data/: README.md
demo/: index.html
docs/: architecture.md  runbook.md
src/app/web/: index.html  styles.css
