
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-liquidity-monitor"
version = "0.1.0"
description = "Measure supply-demand balance, time-to-match, and liquidity risk across marketplace segments."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
